--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		<script src=script.js></script>
 	</body>
 <footer>
-	<p>Script criado por Alcides Andrade no Curso de Programador Front-End no Senai Maracanã, prof Anthony Freitas, 2025</p>
+	<p>Script criado pelo professor Anthony Freitas no Curso de Programador Front-End no Senai Maracanã, Turma QUA02492025O044, 2025</p>
 </footer>
 
 </html>
+
